Import of PICZ/Image-ButtonMaker-0.1.2 from CPAN.
gitpan-cpan-distribution: Image-ButtonMaker
gitpan-cpan-version:      0.1.2
gitpan-cpan-path:         PICZ/Image-ButtonMaker-0.1.2.tar.gz
gitpan-cpan-author:       PICZ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Image::ButtonMaker.
 
+0.1.2 Wed May 19 2004
+        - a lot of small bugfixes
+        - new type of canvas objects
+        - added a small example of usage
+        - changed version scheme
+
 0.01  Tue Jan 27 18:41:31 2004
 	- original version; created by h2xs 1.23 with options
 		-AX -n Image::ButtonMaker
