--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::ButtonMaker.
 
+0.1.4 Mon Oct 24 2005
+        - added l10n features 
+        - added some features for prefixing, postfixing, uppercasing 
+          and lowercasing of text strings
+
 0.1.3 Fre May 21 2004
         - fix for broken 0.1.2 release
           added missing ColorCanvas.pm file to MANIFEST so that the
